disable turbo at logout

--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -64,4 +64,4 @@
 
 <% end%>
 
-<%= menu_link 'Logout', session_logout_path, icon: 'box-arrow-right' %>
+<%= menu_link 'Logout', session_logout_path, icon: 'box-arrow-right', data: { turbo: "false" } %>
