--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -44,19 +44,19 @@
 						<% if user.last_known_location %>
 						<span aria-hidden="true" data-toggle="tooltip" title="<%= user.last_known_location %>">L</span>
 						<% end %><br>
-						<%= best_in_place user, :status, as: :input %>
+						<%= best_in_place user, :status_description, as: :input %>
 					</td>
 
 					<% if params[:status] != 'registered' %>
 					<td class="bar">
 						<%= user.attendance %><br>
-						<%= user.hands.successfully_helped.count %> hands,
-						<%= user.hands.successfully_helped.total_helping_time %> mins
+						<%= user.hands_count %> hands,
+						<%= user.hands_duration_count %> mins
 					</td>
 					<% end %>
 
 					<%
-					subs = user.submits.includes(:grade).group_by(&:pset_id)
+					subs = user.submits.group_by(&:pset_id)
 					%>
 
 					<% @psets.each do |pset| %>
