fine grained permissions

--- a/app/views/users/search.js.erb
+++ b/app/views/users/search.js.erb
@@ -2,5 +2,5 @@
 document.getElementById('search-results').innerHTML = "<%= j(render 'search') %>";
 document.getElementById('search-results').classList.add('show');
 <% else %>
-document.getElementById('search-results').classList.add('remove');
+document.getElementById('search-results').classList.remove('show');
 <% end %>
