--- a/app/views/todos/watch_list.html.erb
+++ b/app/views/todos/watch_list.html.erb
@@ -3,7 +3,7 @@
 	<div class="p-3">Not watching any students</div>
 <% else %>
 	<% @watch_list.each do |user| %>
-	<li><%= link_to "#{user.name}".html_safe, user, class: 'dropdown-item py-2', data: { 'turbo-frame': 'modal' }, onclick: 'modalBrowser.show();' %></li>
+	<li><%= link_to "#{user.name} (#{user.notes_count})".html_safe, user, class: 'dropdown-item py-2', data: { 'turbo-frame': 'modal' }, onclick: 'modalBrowser.show();' %></li>
 	<% end %>
 <% end %>
 <% end %>
