--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,14 +11,16 @@
 	<title><%= title %></title>
 
 	<%= stylesheet_link_tag    'application', :media => 'all' %>
-	<%= javascript_include_tag 'application' %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => 'reload' %>
 
 	<% if ['home', 'page', 'profile'].include?(controller_name) && Settings.pages_enable_math %>
 	<%= javascript_include_tag 'optional/math' %>
 	<%= javascript_include_tag 'https://polyfill.io/v3/polyfill.min.js?features=es6' %>
 	<%= javascript_include_tag 'https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js', { async: true, id: 'MathJax-script' } %>
 	<% end %>
+
 	<%= turbo_include_tags %>
+	<%= stimulus_include_tags %>
 
 	<link rel="icon" type="image/png" href="/images/minor.png" />
 
