--- a/app/views/admin/site/_settings.html.erb
+++ b/app/views/admin/site/_settings.html.erb
@@ -9,3 +9,7 @@
 
 <%= toggle_setting_form('room_for_toc', 'Make room for table of contents') %>
 <%= toggle_setting_form('pages_enable_math', 'Enable MathJax') %>
+
+<hr>
+
+<%= toggle_setting_form('site_enabled', 'Activate site, enable submissions') %>
