--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -1,4 +1,11 @@
-<%= form_tag_if(logged_in? && @page.pset, submissions_path, { :multipart => true, :id => "page_form", data: { persist: 'garlic', destroy: false } }) do %>
+<% if !Settings.site_enabled %>
+<div class="alert alert-danger sticky-top mx-n4 mb-5">
+    <strong>Note:</strong> this site is currently not enabled for submissions.
+</div>
+<% end %>
+
+
+<%= form_tag_if(Settings.site_enabled && logged_in? && @page.pset, submissions_path, { :multipart => true, :id => "page_form", data: { persist: 'garlic', destroy: false } }) do %>
 
 <%= hidden_field_tag :pset_id, @page.pset.id if @page.pset if @allow_submit %>
 
@@ -8,7 +15,7 @@
 </section>
 <% end %>
 
-<% if @page.pset %>
+<% if Settings.site_enabled && @page.pset %>
 <section id="submit-content" class="py-4 my-4 mt-5">
 
 	<% if @submitted_at %>
