some rewording in failed check mail

--- a/app/views/grade_mailer/bad_submit.html.erb
+++ b/app/views/grade_mailer/bad_submit.html.erb
@@ -5,7 +5,7 @@
 <p>
 You sent in a solution that does not work quite correctly according 
 to our automatic checks. Because of this, the submit has been marked 
-as insufficient. You can re-submit it up until the deadline.
+as insufficient. In normal circumstances, you should be able to re-submit.
 </p>
 
 <p>
