--- a/app/views/grade_mailer/bad_submit.text.erb
+++ b/app/views/grade_mailer/bad_submit.text.erb
@@ -4,7 +4,7 @@
 
 You sent in a solution that does not work quite correctly according 
 to our automatic checks. Because of this, the submit has been marked 
-as insufficient. You can re-submit it up until the deadline.
+as insufficient. In normal circumstances, you should be able to re-submit.
 
 Note that the checks usually require your programs to have the exact
 name that is required in the submit form. If you have submitted a file
