use non-small text

--- a/app/views/grade_mailer/bad_submit.html.erb
+++ b/app/views/grade_mailer/bad_submit.html.erb
@@ -17,4 +17,4 @@ using the wrong name, just rename it and try again!
 <% if @login %>
 <hr>
 
-<small><%= @login %></small><% end %>
+<p><%= @login %></p><% end %>
