Implement Stimulus for some JS functionality (#405)
* locally caching student-facing forms
* auto-saving the grade form
* pass/fail buttons for the grade form

--- a/app/views/page/index.html.erb
+++ b/app/views/page/index.html.erb
@@ -4,8 +4,20 @@
 </div>
 <% end %>
 
-
-<%= form_tag_if(Settings.site_enabled && logged_in? && @page.pset, submissions_path, { :multipart => true, :id => "page_form", data: { persist: 'garlic', destroy: false } }) do %>
+<%= form_tag_if(
+		Settings.site_enabled && logged_in? && @page.pset,
+		submissions_path,
+		{
+			multipart: true,
+			id: "page_form",
+			data:
+			{
+				controller: "form-cache",
+				form_cache_target: "form",
+				action: "change->form-cache#saveToLocalStorage submit->form-cache#clearLocalStorage"
+			}
+		}
+	) do %>
 
 <%= hidden_field_tag :pset_id, @page.pset.id if @page.pset if @allow_submit %>
 
