simplify overviews, show grouped psets everywhere

--- a/app/views/layouts/overviews.html.erb
+++ b/app/views/layouts/overviews.html.erb
@@ -1,5 +1,5 @@
 <% content_for :content do %>
-<div class="container-fluid pt-3" style="overflow: scroll">
+<div class="container-fluid pt-3">
 	<%= yield %>
 </div>
 <% end %>
