--- a/app/assets/stylesheets/includes/elements.scss
+++ b/app/assets/stylesheets/includes/elements.scss
@@ -16,16 +16,6 @@
 	width:1.7rem;
 }
 
-#grade-table th a
-{
-	color: #AFAEB0;
-}
-
-//#grade-table .btn-sm
-//{
-//	font-size:small;
-//}
-
 #grade-table td:nth-child(n+2), #grade-table th:nth-child(n+2)
 {
 	text-align:center;
@@ -50,6 +40,22 @@
 {
 	min-width:30px;
 	padding:2px;
+}
+
+#grade-table tr.sticky-1 th
+{
+	background-color: #FBF7F1;
+	position: sticky;
+	top:0;
+	z-index:2;
+}
+
+#grade-table tr.sticky-2 th
+{
+	background-color: #FBF7F1;
+	position: sticky;
+	top:1.5rem;
+	z-index:1;
 }
 
 //****************************************************************************
@@ -124,19 +130,19 @@ span.bubble {
 .grade-button.btn-success, #grade-table td.bg-success
 {
 	color: var(--bs-light) !important;
-	background-color: #40916c !important;
+	background-color: #5dd49d !important;
 }
 
 .grade-button.btn-danger, #grade-table td.bg-danger
 {
 	color: var(--bs-dark) !important;
-	background-color: #d8f3dc !important;
+	background-color: #dffbe4 !important;
 }
 
 .grade-button.btn-warning, #grade-table td.bg-warning
 {
 	color: var(--bs-dark) !important;
-	background-color: #95d5b2 !important;
+	background-color: #a2e8c2 !important;
 }
 
 #submit-content
