--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -2,7 +2,7 @@
 
 <% if current_schedule.present? %>
 <%= menu_group current_schedule.name do %>
-	<%= menu_link 'Overview', overview_path, icon: 'columns' %>
+	<%= menu_link 'Overview', overviews_path, icon: 'columns' %>
 	<%= menu_link 'Notes', notes_path, icon: 'journal-bookmark' %>
 	<%= menu_link 'Grading', grading_index_path, icon: 'pen' %>
 	<%= menu_link 'Announcements...', alerts_path, icon: 'bell-fill', target: 'modal' %>
@@ -41,7 +41,7 @@
 	
 <% if current_user.accessible_schedules.any? %>
 <%= menu_group current_schedule.name do %>
-	<%= menu_link 'Overview', overview_path, icon: 'columns' %>
+	<%= menu_link 'Overview', overviews_path, icon: 'columns' %>
 	<%= menu_link 'Grading', grading_index_path, icon: 'pen' %>
 	<%= menu_link 'Tests...', tests_path, icon: 'check', target: 'modal', condition: Settings.tests_present %>
 <% end %>
@@ -50,7 +50,7 @@
 <% if current_user.accessible_schedules.many? %>
 <%= menu_group 'Your schedules' do %>
 	<% current_user.accessible_schedules.all.each do |s| %>
-	<%= menu_link s.name, [current_user, user: {schedule_id: s.id}], method: :patch, icon: (s==current_schedule ? 'check' : nil) %>
+	<%= menu_link s.name, profile_set_schedule_path(schedule_id: s.id), method: :patch, icon: (s==current_schedule ? 'check' : nil) %>
 	<% end %>
 <% end%>
 <% end %>
@@ -59,7 +59,7 @@
 
 <%= menu_group do %>
 	<%= menu_link 'Hands', hands_path, icon: 'people-fill', condition: Settings.hands_allow %>
-	<%= menu_link 'Overview', overview_path, icon: 'columns', condition: current_user.groups.any? || current_user.schedules.any? %>
+	<%= menu_link 'Overview', overviews_path, icon: 'columns', condition: current_user.groups.any? || current_user.schedules.any? %>
 	<%= menu_link 'Grading', grading_index_path, icon: 'pen', condition: !Schedule.exists? || current_user.groups.any? || current_user.schedules.any? %>
 <% end %>
 
