--- a/app/views/overviews/_table.html.erb
+++ b/app/views/overviews/_table.html.erb
@@ -1,68 +1,81 @@
-<table id="grade-table" class="table table-sm table-striped table-responsive">
-	<tr>
-		<th></th>
+<table id="grade-table" class="table table-sm table-borderless table-responsive">
 
-		<th>Participation</th>
+    <% if current_user.admin? %>
+    <tr class="sticky-1">
+        <th>&nbsp;</th>
+        <th>&nbsp;</th>
 
-		<% @psets.each do |pset| %>
-		<th>
-			<%= link_to_if current_user.admin?, pset.name[0..2], publish_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id), method: :post, data: { confirm: "Publish all grades for this assignment?" }, title: pset.name %>
-		</th>
-		<% end %>
-	</tr>
+        <% @overview.each do |name, psets| %>
+        <% psets.each_with_index do |(pset, submit), index| %>
+        <th style="<%= 'border-left: 1.5px solid black;' if index==0 %>">
+            <div class="dropdown">
+                <button class="btn px-1 py-0 btn-sm dropdown-toggle" type="button" data-toggle="dropdown" aria-expanded="false"></button>
+                <ul class="dropdown-menu dropdown-menu-right">
+                    <li>
+                        <%= link_to "Publish all", publish_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id), method: :post, data: { confirm: "Publish all grades for this assignment?" }, class: 'small dropdown-item' %>
+                    </li>
+                    <li><hr class="dropdown-divider"></li>
+                    <% groups.each do |group, user_list|%>
+                    <% if group %>
+                    <%= link_to "Unpublish for #{group.name}", reopen_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id, group_id: group.id), method: :post, data: { confirm: "Re-open all grades for this assignment for this group?" }, class: 'small dropdown-item' %>
+                    <% end %>
+                    <% end %>
+                </ul>
+            </div>
+        </th>
+        <% end %>
+        <% end %>
+    </tr>
+    <% end %>
 
-	<% users.each do |group, user_list|%>
-		<tr>
-			<th class="py-2" colspan="2">
-				<% if group %>
-					<%= group.name %> &ndash;
-					<%= group.grader_names %>
-				<% else %>
-					Groupless
-				<% end %>
-				(<%= user_list.size %>)
-			</th>
-			<% @psets.each do |pset| %>
-			<th>
-				<% if group %>
-				<%= link_to_if current_user.admin?, pset.name[0..2], reopen_schedule_grades_path(schedule_slug: @selected_schedule.slug, pset_id: pset.id, group_id: group.id), method: :post, data: { confirm: "Re-open all grades for this assignment for this group?" }, title: pset.name, classs: 'text-light' %>
-				<% else %>
-				<% end %>
-			</th>
-			<% end %>
-		</tr>
-		<% user_list.each do |user| %>
-			<% cache [user, :head_overview] do %>
-				<tr <%= 'class=table-warning' if @show_inactive && user.stagnated? %>>
-					<td>
-						<%= link_to user.name, user, data: { toggle: "modal" }, target: "modal" %>
-						<% if user.alarm %>
-						<%= bootstrap_icon 'exclamation-triangle-fill', width: 12, height: 12 %>
-						<% end %>
-						<% if user.last_known_location %>
-						<span aria-hidden="true" data-toggle="tooltip" title="<%= user.last_known_location %>">L</span>
-						<% end %><br>
-						<%= best_in_place user, :status_description, as: :input %>
-					</td>
+    <tr class="sticky-2">
+        <th>&nbsp;</th>
+        <th>&nbsp;</th>
 
-					<td class="bar">
-						<%= user.attendance %><br>
-						<%= user.hands_count %> hands,
-						<%= user.hands_duration_count %> mins
-					</td>
+        <% @overview.each do |group, psets| %>
+        <th colspan="<%= psets.length %>" style="border-left: 1.5px solid black;">
+            <%= group.humanize %>
+        </th>
+        <% end %>
+    </tr>
 
-					<%
-					subs = user.submits.group_by(&:pset_id)
-					%>
-
-					<% @psets.each do |pset| %>
-					<% grade = subs && subs[pset.id] && subs[pset.id][0].grade %>
-					<td class="<%= grade_bg_type(grade.any_final_grade, grade.public?) if grade %>">
-						<%= grade_button(user, pset, subs)%>
-					</td>
-					<% end %>
-				</tr>
-			<% end %>
-		<% end %>
-	<% end %>
+    <% groups.each do |group, user_list|%>
+    <tr>
+        <th class="py-2" colspan="2">
+            <% if group %>
+            <%= group.name %> &ndash;
+            <%= group.grader_names %>
+            <% else %>
+            Groupless
+            <% end %>
+            (<%= user_list.size %>)
+        </th>
+    </tr>
+    <% user_list.each do |user| %>
+    <% cache [user, :head_overview] do %>
+    <tr>
+        <td>
+            <%= link_to user.name, user, data: { toggle: "modal" }, target: "modal" %>
+            <% if user.alarm %>
+            <%= bootstrap_icon 'exclamation-triangle-fill', width: 12, height: 12 %>
+            <% end %>
+            <% if user.last_known_location %>
+            <span aria-hidden="true" data-toggle="tooltip" title="<%= user.last_known_location %>">L</span>
+            <% end %><br>
+            <% if current_user.senior? %>
+                <%= best_in_place user, :status_description, as: :input %>
+            <% end %>
+        </td>
+        <td class="bar">
+            <% if current_user.senior? %>
+            <%= user.attendance %><br>
+            <%= user.hands_count %> hands,
+            <%= user.hands_duration_count %> mins
+            <% end %>
+        </td>
+        <%= render partial: 'buttons', locals: { user: user, template: @overview } %>
+    </tr>
+    <% end %>
+    <% end %>
+    <% end %>
 </table>
