fix webhook link

--- a/app/views/admin/site/_webhook.html.erb
+++ b/app/views/admin/site/_webhook.html.erb
@@ -7,6 +7,6 @@
 </p>
 <% else %>
 <p>
-	<%= link_to "Generate", admin_site_generate_secret_path, method:'post', class:'btn btn-outline-primary' %>
+	<%= button_to "Generate", admin_site_generate_secret_path, method:'post', class:'btn btn-outline-primary' %>
 </p>
 <% end %>
