--- a/app/views/home/announcements.html.erb
+++ b/app/views/home/announcements.html.erb
@@ -1,5 +1,7 @@
-<div id="timeline" class="row">
-	<div class="col">
-	<%= render partial: 'alert', collection: alerts_for_current_schedule %>
-	</div>
+<div id="content">
+    <div id="timeline" class="row">
+        <div class="col">
+            <%= render partial: 'alert', collection: alerts_for_current_schedule %>
+        </div>
+    </div>
 </div>
