--- a/app/views/submissions/index.html.erb
+++ b/app/views/submissions/index.html.erb
@@ -1,21 +1,22 @@
-<% if @overview_config.present? %>
+<div id="content">
+    <% if @overview_config.present? %>
 
-<div id="timeline" class="row flex-xl-row-reverse">
-	<div class="col-12 col-xl-6">
-		<%= render partial: "grades_overview" %>
-	</div>
-	<div class="col-xl-6">
-		<%= render partial: "items/item", collection: @items %>
-	</div>
+    <div id="timeline" class="row flex-xl-row-reverse">
+        <div class="col-12 col-xl-6">
+            <%= render partial: "grades_overview" %>
+        </div>
+        <div class="col-xl-6">
+            <%= render partial: "items/item", collection: @items %>
+        </div>
+    </div>
+
+    <% else %>
+
+    <div id="timeline" class="row flex-xl-row-reverse">
+        <div class="col">
+            <%= render partial: "items/item", collection: @items %>
+        </div>
+    </div>
+
+    <% end %>
 </div>
-
-<% else %>
-
-<div id="timeline" class="row flex-xl-row-reverse">
-	<div class="col">
-		<%= render partial: "items/item", collection: @items %>
-	</div>
-</div>
-
-<% end %>
-
