--- a/app/views/application/_sidebar.html.erb
+++ b/app/views/application/_sidebar.html.erb
@@ -1,23 +1,28 @@
-<div id="sidebar-tools" class="navbar navbar-expand flex-shrink-0" style="z-index:1000">
-	<div class="container-fluid px-2">
-		<button class="navbar-toggler border-0 px-0 d-block d-lg-none mr-2" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="navbar-toggler-icon text-primary" style="vertical-align:-4px;"><%= bootstrap_icon 'list', width:32, height:32 %></span>
-		</button>
-		<%= render 'brand' %>
-		<% if !authenticated? %>
-		<li class="navbar-nav d-block d-lg-none"><%= link_to("Sign in".html_safe, session_login_path, class:"d-inline-block", data: { turbo: false })%></li>
-		<% else #if logged_in? %>
-		<div class="navbar-nav d-flex d-lg-none ">
-			<%= render 'menu' %>
-		</div>
-		<% end %>
-	</div>
+<div id="sidebar-tools" class="flex flex-column navbar navbar-expand flex-shrink-0" style="z-index:1000;">
+    <div class="container-fluid px-2">
+        <button class="navbar-toggler border-0 px-0 d-block d-lg-none mr-2" type="button" data-toggle="collapse" data-target="#sidebar-content" aria-controls="sidebar-content" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon text-primary" style="vertical-align:-4px;"><%= bootstrap_icon 'list', width:32, height:32 %></span>
+        </button>
+        <%= render 'brand' %>
+        <% if !authenticated? %>
+        <li class="navbar-nav d-block d-lg-none"><%= link_to(t(:sign_in), session_login_path, class:"d-inline-block", data: { turbo: false })%></li>
+        <% else #if logged_in? %>
+        <div class="navbar-nav d-flex">
+            <%= render 'menu' %>
+        </div>
+        <% end %>
+    </div>
+    <% if current_user.senior? %>
+    <div class="container-fluid px-2 px-md-3 mt-2 my-md-2 flex-fill">
+        <%= render partial: 'search' %>
+    </div>
+    <% end %>
 </div>
 
 <%# Main navigation%>
 
 <div id="sidebar-content" data-turbo-permanent class="sidebar-collapse sidebar-scroller flex-grow-1 turbolinks-disable-scroll collapse">
-	<%= render 'sidebar_content' %>
+    <%= render 'sidebar_content' %>
 </div>
 
 <%= render 'course_links' %>
