--- a/app/views/layouts/navbar.html.erb
+++ b/app/views/layouts/navbar.html.erb
@@ -5,19 +5,26 @@
 <% content_for :body do %>
 <div class="d-flex flex-column h-100" style="max-height:100%">
 
-	<div id="navbar" class="navbar navbar-expand-lg flex-shrink-0 py-2 pl-2 pr-3">
+    <div id="navbar" class="navbar navbar-expand-lg flex-shrink-0 py-2 pl-2 pr-3">
 
-		<%= render 'brand' %>
+        <%= render 'brand' %>
 
-		<div class="collapse navbar-collapse" id="navbarSupportedContent">
-			<%= yield :navbar_items %>
-			<%= render 'float_nav' %>
-		</div>
-	</div>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <%= yield :navbar_items %>
+            <%= render 'float_nav' %>
+            <% if !authenticated? %>
+            <ul id="icon-nav" class="navbar-nav ml-auto">
+                <li class="nav-item"><%= link_to(t(:sign_in), session_login_path, class:"nav-link", data: { turbo: false })%></li>
+            </ul>
+            <% else %>
+            <%= render 'menu' %>
+            <% end %>
+        </div>
+    </div>
 
-	<%= render "alerts" %>
+    <%= render "alerts" %>
 
-	<%= content_for?(:content) ? yield(:content) : yield %>
+    <%= content_for?(:content) ? yield(:content) : yield %>
 </div>
 <% end %>
 <%= render template: "layouts/application" %>
