additional fixes for submit box

--- a/app/assets/stylesheets/includes/elements.scss
+++ b/app/assets/stylesheets/includes/elements.scss
@@ -187,3 +187,12 @@ span.bubble {
 		border-radius:1rem;
 	}
 }
+
+#submit-form
+{
+	background-color: #eef3f7;
+	border: none;
+
+	margin-top:2rem;
+	margin-bottom:2rem;
+}
