--- a/app/views/page/_submit.html.erb
+++ b/app/views/page/_submit.html.erb
@@ -1,22 +1,25 @@
-<% if Settings.site_enabled && @page.pset %>
+<% if @page.pset.present? %>
 
 <section id="submit-content">
     <h2 class="mt-0">Submit</h2>
     <p>
-        <% if @submit %>
-        <%= bootstrap_icon 'check2-all' %><strong><%= t 'submit.you_submitted_ago', time: time_ago_in_words(@submit.submitted_at) %></strong>
-        <% if @submit.grade_public? && !@submit.may_be_resubmitted? %>
-        <%= link_to t('submit.check_feedback'), submissions_path %>
-        <% else %>
-        <%= t 'submit.until_deadline_new_version' %>
-        <%= link_to t('submit.see_submissions_page'), submissions_path %>
-        <% end %>
-        <% elsif @allow_submit %>
-        <%= t 'submit.instructions' %>
+        <% if @submit.present? %>
+            <% if @submit.submitted_at # student did actually submit herself %>
+            <%= bootstrap_icon 'check2-all' %><strong><%= t 'submit.you_submitted_ago', time: time_ago_in_words(@submit.submitted_at) %></strong>
+            <% end %>
+
+            <% if @submit.grade_public? && !@submit.may_be_resubmitted? # grade has been published %>
+            <% elsif Settings.site_enabled %>
+            <%= t 'submit.until_deadline_new_version' %>
+            <% end %>
+        <% elsif Settings.site_enabled %>
+            <%= t 'submit.instructions' %>
         <% end %>
     </p>
 
-    <% if !current_user.can_submit? %>
+    <% if not Settings.site_enabled %>
+    <p><strong><%= bootstrap_icon('exclamation-diamond') %> <%= t 'submit.course_not_open' %></strong></p>
+    <% elsif !current_user.can_submit? %>
     <p><strong><%= bootstrap_icon('exclamation-diamond') %> <%= t 'submit.cant_not_logged_in' %></strong></p>
     <% elsif !@allow_submit %>
     <% if !@submit.grade_public?%>
@@ -26,16 +29,26 @@
     </p>
     <% end %>
     <% elsif @page.pset %>
-    <%= render 'submit_form' %>
+    <div class="card" id="submit-form">
+        <div class="card-body">
+            <%= render 'submit_form' %>
+        </div>
+    </div>
     <% end %>
+    
+    <p><strong>
+        <%= bootstrap_icon('kanban') %>
+        <%= t('submit.see_submissions_page', submissions_page: link_to(t('submissions_page'), submissions_path)).html_safe %>
+    </strong></p>
+    
 </section>
 
-<% if @submit || @page.pset %>
+<% if @submit || Settings.site_enabled %>
 <div id="submit-button">
     <button class="btn btn-primary" type="button" onclick="window.scrollTo(0,document.body.scrollHeight);">
     <% if @submit %>
         <%= t 'submit.you_submitted_ago', time: time_ago_in_words(@submit.submitted_at) %> <%= bootstrap_icon 'arrow-down' %>
-    <% elsif @page.pset %>
+    <% else %>
         <%= t 'submit.at_the_end_of_page' %> <%= bootstrap_icon 'arrow-down' %>
     <% end %>
     </button>
