small sidebar/brand fixes for smaller screens

--- a/app/assets/stylesheets/includes/theme.scss
+++ b/app/assets/stylesheets/includes/theme.scss
@@ -26,8 +26,8 @@ summary
 	
 	#sidebar-tools
 	{
-		-webkit-backdrop-filter: brightness(102%);
-		backdrop-filter: brightness(102%);
+		-webkit-backdrop-filter: saturate(130%);
+		backdrop-filter: saturate(130%);
 
 		.bg-light
 		{
@@ -37,8 +37,8 @@ summary
 
 	#course-links
 	{
-		-webkit-backdrop-filter: brightness(103%);
-		backdrop-filter: brightness(103%);
+		-webkit-backdrop-filter: brightness(101%);
+		backdrop-filter: brightness(101%);
 
 		.bg-light
 		{
