small optimizations for the submit box

--- a/app/assets/stylesheets/includes/elements.scss
+++ b/app/assets/stylesheets/includes/elements.scss
@@ -190,9 +190,18 @@ span.bubble {
 
 #submit-form
 {
-	background-color: #eef3f7;
-	border: none;
+	background-color: #D6EBFA;
+	border:none;
+	border-top: 1px solid white;
+	border-bottom: 1px solid white;
+	border-radius:0;
+	padding: 0.5rem;
 
 	margin-top:2rem;
 	margin-bottom:2rem;
+
+	h6:first-child
+	{
+		margin-top:0 !important;
+	}
 }
