--- a/app/views/page/_submit.html.erb
+++ b/app/views/page/_submit.html.erb
@@ -2,20 +2,19 @@
 
 <section id="submit-content">
     <h2 class="mt-0">Submit</h2>
-    <p>
-        <% if @submit.present? %>
-            <% if @submit.submitted_at # student did actually submit herself %>
-            <%= bootstrap_icon 'check2-all' %><strong><%= t 'submit.you_submitted_ago', time: time_ago_in_words(@submit.submitted_at) %></strong>
-            <% end %>
-
-            <% if @submit.grade_public? && !@submit.may_be_resubmitted? # grade has been published %>
-            <% elsif Settings.site_enabled %>
-            <%= t 'submit.until_deadline_new_version' %>
-            <% end %>
-        <% elsif Settings.site_enabled %>
-            <%= t 'submit.instructions' %>
+    <% if @submit.present? %>
+        <% if @submit.submitted_at # student did actually submit herself %>
+        <p><%= bootstrap_icon 'check2-all' %> <strong><%= t 'submit.you_submitted_ago', time: time_ago_in_words(@submit.submitted_at) %></strong></p>
         <% end %>
-    </p>
+
+        <% if @submit.grade_public? && !@submit.may_be_resubmitted? # grade has been published %>
+        <p><%= bootstrap_icon 'check2-all' %> <%= t 'submit.submit_is_graded' %></p>
+        <% elsif Settings.site_enabled %>
+        <p><%= bootstrap_icon 'check2-all' %> <%= t 'submit.until_deadline_new_version' %></p>
+        <% end %>
+    <% elsif Settings.site_enabled %>
+        <p><%= t 'submit.instructions' %></p>
+    <% end %>
 
     <% if not Settings.site_enabled %>
     <p><strong><%= bootstrap_icon('exclamation-diamond') %> <%= t 'submit.course_not_open' %></strong></p>
@@ -36,17 +35,17 @@
     </div>
     <% end %>
     
-    <p><strong>
+    <p>
         <%= bootstrap_icon('kanban') %>
         <%= t('submit.see_submissions_page', submissions_page: link_to(t('submissions_page'), submissions_path)).html_safe %>
-    </strong></p>
+    </p>
     
 </section>
 
 <% if @submit || Settings.site_enabled %>
 <div id="submit-button">
     <button class="btn btn-primary" type="button" onclick="window.scrollTo(0,document.body.scrollHeight);">
-    <% if @submit %>
+    <% if @submit && @submit.submitted_at %>
         <%= t 'submit.you_submitted_ago', time: time_ago_in_words(@submit.submitted_at) %> <%= bootstrap_icon 'arrow-down' %>
     <% else %>
         <%= t 'submit.at_the_end_of_page' %> <%= bootstrap_icon 'arrow-down' %>
