--- a/app/views/admin/site/index.html.erb
+++ b/app/views/admin/site/index.html.erb
@@ -8,9 +8,7 @@
 
 <%= render partial: 'settings', layout: 'modal_card', locals: { title: 'Settings', subtitle: nil }%>
 
-<% if Dropbox::Client.available? %>
-<%= render partial: 'dropbox', layout: 'modal_card', locals: { title: 'Dropbox', subtitle: nil }%>
-<% end %>
+<%= render partial: 'webdav', layout: 'modal_card', locals: { title: 'Archiving', subtitle: nil }%>
 
 <%= render partial: 'webhook', layout: 'modal_card', locals: { title: 'Webhook', subtitle: nil }%>
 
