--- a/app/views/page/_submit.html.erb
+++ b/app/views/page/_submit.html.erb
@@ -9,18 +9,18 @@
 
         <% if @submit.grade_public? && !@submit.may_be_resubmitted? # grade has been published %>
         <p><%= bootstrap_icon 'check2-all' %> <%= t 'submit.submit_is_graded' %></p>
-        <% elsif Settings.site_enabled %>
+        <% elsif Settings.site_enabled && Webdav::Client.available? %>
         <p><%= bootstrap_icon 'check2-all' %> <%= t 'submit.until_deadline_new_version' %></p>
         <% end %>
     <% elsif Settings.site_enabled %>
         <p><%= t 'submit.instructions' %></p>
     <% end %>
 
-    <% if not Settings.site_enabled %>
+    <% if !Settings.site_enabled || !Webdav::Client.available? %>
     <p><strong><%= bootstrap_icon('exclamation-diamond') %> <%= t 'submit.course_not_open' %></strong></p>
-    <% elsif !current_user.can_submit? %>
+    <% elsif not current_user.can_submit? %>
     <p><strong><%= bootstrap_icon('exclamation-diamond') %> <%= t 'submit.cant_not_logged_in' %></strong></p>
-    <% elsif !@allow_submit %>
+    <% elsif not @allow_submit %>
     <% if !@submit.grade_public?%>
     <p>
         <strong><%= bootstrap_icon('exclamation-diamond') %> <%= t 'submit.cant_resubmit' %></strong>
