add border for cols in content

--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -251,6 +251,11 @@ section, .sectionbody .content
 	{
 		@extend .embed;
 	}
+
+	.row .col:not(:first-child)
+	{
+		border-left:1px solid gray;
+	}
 }
 
 /*
