--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -252,6 +252,12 @@ section, .sectionbody .content
 		@extend .embed;
 	}
 
+	.row
+	{
+		margin-top:1.5rem;
+		margin-bottom:1.5rem;
+	}
+
 	.row .col:not(:first-child)
 	{
 		border-left:1px solid gray;
